@@ -36,7 +36,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -201,7 +200,7 @@ public class BalToolDescriptor {
 
         return getToolJarsMatchingPattern(pattern, parentPath.get()).stream()
                 .map(path1 -> new BalToolDescriptor.Dependency(path1.toString()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<Path> getToolJarsMatchingPattern(String pattern, Path parentPath) {
