@@ -42,7 +42,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 
@@ -161,7 +160,7 @@ public class AbstractDocumentServiceContext implements DocumentServiceContext {
             throw new RuntimeException("Cannot find a valid document");
         }
         return ((ModulePartNode) document.get().syntaxTree().rootNode()).imports().stream()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
