@@ -18,7 +18,6 @@ package org.ballerinalang.docgen.generator.model;
 import com.google.gson.annotations.Expose;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Represent documentation for a Client.
@@ -43,18 +42,18 @@ public class Client extends BClass {
     public List<Function> getOtherMethods(List<Function> methods) {
         return super.getOtherMethods(methods).stream()
                 .filter(function -> !function.isRemote && !function.isResource)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<Function> getRemoteMethods() {
         return this.methods.stream()
                 .filter(function -> function.isRemote)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<Function> getResourceMethods() {
         return this.methods.stream()
                 .filter(function -> function.isResource)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
