@@ -35,7 +35,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 /**
  * Tests for JsonToRecordConverter.
@@ -400,7 +399,7 @@ public class JsonToRecordConverterTests {
         io.ballerina.jsonmapper.JsonToRecordResponse response =
                 (io.ballerina.jsonmapper.JsonToRecordResponse) result.get();
         List<String> generatedDiagnosticMessages = response.getDiagnostics().stream()
-                .map(JsonToRecordMapperDiagnostic::toString).collect(Collectors.toList());
+                .map(JsonToRecordMapperDiagnostic::toString).toList();
         List<String> expectedCDiagnosticMessages = List.of("[ERROR] Provided JSON is invalid : " +
                 "Unterminated object at line 5 column 4 path $.position");
         Assert.assertEquals(generatedDiagnosticMessages, expectedCDiagnosticMessages);
@@ -417,7 +416,7 @@ public class JsonToRecordConverterTests {
         io.ballerina.jsonmapper.JsonToRecordResponse response =
                 (io.ballerina.jsonmapper.JsonToRecordResponse) result.get();
         List<String> generatedDiagnosticMessages = response.getDiagnostics().stream()
-                .map(JsonToRecordMapperDiagnostic::toString).collect(Collectors.toList());
+                .map(JsonToRecordMapperDiagnostic::toString).toList();
         List<String> expectedCDiagnosticMessages =
                 List.of("[ERROR] Provided JSON is unsupported. It may be null or have missing types.");
         Assert.assertEquals(generatedDiagnosticMessages, expectedCDiagnosticMessages);
